feat: add shopping cart functionality

--- a/online_shop/static/assets/css/main.css
+++ b/online_shop/static/assets/css/main.css
@@ -2379,3 +2379,8 @@ section,
   color: color-mix(in srgb, var(--default-color), transparent 60%);
   font-size: 14px;
 }
+
+table img.fixed-size-img-in-shopping-cart {
+  height: auto;
+  width: 30%;
+}
