--- a/online_shop/templates/base.html
+++ b/online_shop/templates/base.html
@@ -1,4 +1,5 @@
 {% load static %} 
+{% load bootstrap4 %}
 
 <!DOCTYPE html>
 <html lang="en">
@@ -18,6 +19,7 @@
   <link href="https://fonts.googleapis.com" rel="preconnect">
   <link href="https://fonts.gstatic.com" rel="preconnect" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap" rel="stylesheet">
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
 
   <!-- Vendor CSS Files -->
   <link href="{% static 'assets/vendor/bootstrap/css/bootstrap.min.css' %}" rel="stylesheet">
@@ -51,9 +53,9 @@
 
       <nav id="navmenu" class="navmenu">
         <ul>
-          <li><a href="#" class="active">Главная</a></li>
+          <li><a href="{% url 'shop:main_page' %}">Главная</a></li>
           <li><a href="{% url 'shop:product_list' %}">Каталог</a></li>
-          <li><a href="services.html">Корзина</a></li>
+          <li><a href="{% url 'cart:cart_detail' %}">Корзина</a></li>
           <li class="dropdown"><a href="#"><span>Профиль</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
             <ul>
               {% if user.is_authenticated %} 
