feat: add context processor for cart items counting

--- a/online_shop/static/assets/css/main.css
+++ b/online_shop/static/assets/css/main.css
@@ -2388,3 +2388,15 @@ table img.fixed-size-img-in-shopping-cart {
 table th.image-column {
   width: 400px;
 }
+
+.cart-icon {
+  position: relative;
+}
+
+.cart-counter {
+  position: absolute;
+  top: -10px;
+  right: -10px;
+  padding: 2px 6px;
+  font-size: 12px;
+}
