--- a/online_shop/templates/base.html
+++ b/online_shop/templates/base.html
@@ -55,7 +55,11 @@
         <ul>
           <li><a href="{% url 'shop:main_page' %}">Главная</a></li>
           <li><a href="{% url 'shop:product_list' %}">Каталог</a></li>
-          <li><a href="{% url 'cart:cart_detail' %}">Корзина</a></li>
+          {% with total_items=cart|length %}
+          <li><a href="{% url 'cart:cart_detail' %}" class="cart-icon"><i class="fas fa-shopping-basket"></i>
+            <span class="cart-counter">{{ total_items }}</span>
+          </a></li>
+          {% endwith %} 
           <li class="dropdown"><a href="#"><span>Профиль</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
             <ul>
               {% if user.is_authenticated %} 
