--- a/online_shop/static/assets/css/main.css
+++ b/online_shop/static/assets/css/main.css
@@ -2397,6 +2397,9 @@ table th.image-column {
   position: absolute;
   top: -10px;
   right: -10px;
+  background-color: #79a896;
+  color: white;
+  border-radius: 50%;
   padding: 2px 6px;
   font-size: 12px;
 }
