--- a/online_shop/static/assets/css/main.css
+++ b/online_shop/static/assets/css/main.css
@@ -2088,7 +2088,11 @@ section,
 }
 
 .comment-form form .form-group {
-  margin-bottom: 25px;
+  margin-bottom: 1rem;
+}
+
+input, textarea {
+  width: 100%; 
 }
 
 .comment-form form .btn-primary {
@@ -2234,6 +2238,7 @@ section,
 
 .widget-item:last-child {
   margin-bottom: 0;
+  margin-top: 30px;
 }
 
 .blog-author-widget img {
