--- a/online_shop/templates/orders/order_created.html
+++ b/online_shop/templates/orders/order_created.html
@@ -7,8 +7,7 @@
 <div class="container mt-3">
     <h1 class="ml-3">Спасибо, Ваш заказ оформлен</h1>
     <div class="pl-4">
-        <p>Вы можете отслеживать данные по Вашему заказу в Вашем профиле. Номер Вашего заказа -  
-        <strong>{{ order.id }}</strong>.</p>
+        <p>Вы можете отслеживать данные по Вашему заказу в Вашем профиле.</p>
     </div>
 </div>
 {% endblock %}
