--- a/online_shop/templates/shop/product_detail.html
+++ b/online_shop/templates/shop/product_detail.html
@@ -40,10 +40,39 @@
               </p>
             </div>
           </div>
+
+      
         </div>
       </div>
     </div>
   </section><!-- /About 2 Section -->
 
+  {% if recommended_products %}
+  <section id="portfolio" class="portfolio section">
+
+    <div class="container">
+      <h2 class="content-title text-start">С этим товаром часто покупают:</h2>
+      
+
+      <div class="isotope-layout" data-default-filter="*" data-layout="masonry" data-sort="original-order">
+        <div class="row gy-4 isotope-container" data-aos="fade-up" data-aos-delay="200">
+
+          {% for product in recommended_products %}
+          <div class="col-lg-3 col-md-6 portfolio-item isotope-item filter-app">
+            <a href="{{ product.get_absolute_url }}">
+            <img src="{{ product.image.url }}" class="img-fluid" alt="">
+            </a>
+            <div class="portfolio-info">
+              <h4>{{ product.name }}</h4>
+              <p>{{ product.price }} руб.</p>
+              <a href="{{ product.get_absolute_url }}">перейти к деталям</a>
+            </div>
+          </div>
+          {% endfor %} 
+
+      </div>
+    </div>
+  </section>
+  {% endif %}
 
 {% endblock %}
